[package]
name = "hornvale"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]

[lib]
name = "hornvale"
path = "src/lib.rs"

[[bin]]
name = "hornvale"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
colored = "2.0.0"
derivative = "2.2.0"
function_name = "0.3.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", features= ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rustyline = "10.0.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs = { version = "0.18.0", features = ["shred-derive", "specs-derive"] }
specs-derive = "0.4.1"
tui = { version = "0.19.0", features = ["serde"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
zcomponents = "0.2.0"

[profile.release]
lto = false
